# signaloid-airfoil-lift-model

./: CMakeLists.txt  README.md
src/: main.c
